//
// Copyright 2016, TeamDev Ltd. All rights reserved.
//
// Redistribution and use in source and/or binary forms, with or without
// modification, must retain the above copyright notice and the following
// disclaimer.
//
// THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
// "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
// LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
// A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
// OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
// SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
// LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
// DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
// THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
// (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
// OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
//
syntax = "proto3";

package spine.time.change;

option (type_url_prefix) = "type.spine3.org";
option java_generate_equals_and_hash = true;
option java_multiple_files = true;
option java_outer_classname = "TimeChangeProto";
option java_package = "org.spine3.time.change";

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "spine/time/time.proto";
import "spine/annotations.proto";
import "spine/validate.proto";
import "spine/time/zone_offset.proto";

//
// This file provides messages that define changes of fields in other messages.
// The `TimeChange` messages can be use as a request to change a value (e.g. as a field of a command),
// or as information on the change made (e.g. as a part of an event).
//
// For all types the following rule apply: `new_value` field must not be equal to `previous_value`.
//

// Definition of an interval change.
message IntervalChange {

    // The value of the field that's changing.
    //
    // This field is blank if the target field is blank too.
    //
    // A previous start and end of the interval.
    google.protobuf.Timestamp previous_start_value = 1;
    google.protobuf.Timestamp previous_end_value = 2;

    // The new value of the field.
    //
    // This field must be populated. If you want to clear a field, use a special command.
    // We encourage separate commands for removal to make event handlers more straightforward.
    // Usually removal of a value and changing a value should have different consequences.
    // Hence separate handles.
    //
    // A new start and end of the interval.
    google.protobuf.Timestamp new_start_value = 3;
    google.protobuf.Timestamp new_end_value = 4;
}

// Definition of a change of `LocalDate` fields.
message LocalDateChange {

    // The value of fields that are changing.
    int32 previous_year_value = 1 [(required) = true];
    MonthOfYear previous_month_value = 2 [(required) = true];
    int32 previous_day_value = 3 [(required) = true];

    // The new value of fields.
    int32 new_year_value = 4 [(required) = true];
    MonthOfYear new_month_value = 5 [(required) = true];
    int32 new_day_value = 6 [(required) = true];
}

// Definition of a change of `LocalTime` fields.
message LocalTimeChange {

    // The value of fields that are changing.
    int32 previous_hours_value = 1 [(required) = true];
    int32 previous_minutes_value = 2 [(required) = true];
    int32 previous_seconds_value = 3;
    int32 previous_millis_value = 4;
    int64 previous_nanos_value = 5;

    // The new value of fields.
    int32 new_hours_value = 6 [(required) = true];
    int32 new_minutes_value = 7 [(required) = true];
    int32 new_seconds_value = 8;
    int32 new_millis_value = 9;
    int64 new_nanos_value = 10;
}

// Definition of a change of `OffsetTime` fields.
message OffsetTime {

    // The value of fields that are changing.
    LocalTime previous_time_value = 1 [(required) = true];
    ZoneOffset previous_offset_value = 2 [(required) = true];

    // The new value of fields.
    LocalTime new_time_value = 3 [(required) = true];
    ZoneOffset new_offset_value = 4 [(required) = true];
}
